code cleaning up